--- a/css/global.css
+++ b/css/global.css
@@ -1,3 +1,7 @@
+body{
+    padding-top: 100px;
+}
+
 .menu-container {
     position:fixed;
     top: 0;
@@ -28,7 +32,7 @@
 .search-input {
     width: 80%;
     font-size: 18pt;
-    height: 30px;
+    height: 80%;
     padding: 5px;
     border: 1px solid grey;
     border-radius: 4px;
@@ -52,7 +56,7 @@
 
 .login-button {
     padding: 5px 10px;
-    background-color: lightgrey;
+    background-color: white;
     font-size:15pt;
     color: black;
     border: none;
@@ -60,11 +64,78 @@
     border-radius: 2px;
     margin-right: 30px;
 }
-body{
-    padding-top: 100px;
-}
 
 a {
     text-decoration: none;
     color: black;
+  }
+
+  .popup-overlay{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s, opacity 0.3s ease;
+  }
+
+  .popup-content{
+    width: 328px;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  }
+
+  .popup-content h2{
+    text-align: center;
+    margin-top: -30px;
+  }
+
+  .popup-content form {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .popup-content input{
+    margin-bottom: 10px;
+	padding: 8px;
+	border-radius: 3px;
+	border: 1px solid #ccc;
+    font-size: 1em;
+  }
+
+  .popup-content input[type="submit"]{
+    padding: 8px 12px;
+    border: none;
+    border-radius: 3px;
+    background-color: dimgray;
+    color: #fff;
+    cursor: pointer;
+  }
+
+  .popup-content .close-btn{
+    position: relative;
+    top: -30px;
+    left: 98%;
+    cursor: pointer;
+    font-size: 2em;
+  }
+
+  .signup-button{
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 40px;
+    box-shadow: 0 0 0 1px dimgray inset;
+    border-radius: 3px;
+    color: #000;
+    cursor: pointer;
   }
