--- a/css/home.css
+++ b/css/home.css
@@ -1,9 +1,6 @@
-
-
 .category-button > a {
     color: black;
 }
-
 
 .button-img{
     width:32px;
@@ -51,20 +48,18 @@
     user-select:none;
     flex-wrap: nowrap;
     margin: auto;
-    max-width: 800px;
-    max-height: 300px;
+    max-width: 851px;
+    max-height: 309px;
 }
 
 .banner-item{
     display:flex;
     align-items: center;
     justify-content: center;
-
     position:relative;
     left: 0px;
-
     width:100%;
-    height:300px;
+    height:100%;
     flex-shrink: 0;
     transition: left 0.15s;
 }
