category, home 변경
버튼 마우스 오버 시 커서가 pointer로 바뀌도록 변경
카테고리 버튼 클릭 시 해당 카테고리로 이동
청소, 방역(clean) 카테고리 클릭 시 카테고리 목록 바뀜

--- a/css/home.css
+++ b/css/home.css
@@ -1,7 +1,3 @@
-.category-button > a {
-    color: black;
-}
-
 .button-img{
     width:32px;
     height: 32px;
@@ -23,6 +19,7 @@
     min-width: 67px;
     max-width: 154px;
     min-height: 87px;
+    cursor: pointer;
 }
 
 .category-container{
@@ -50,6 +47,7 @@
     margin: auto;
     max-width: 851px;
     max-height: 309px;
+    cursor: pointer;
 }
 
 .banner-item{
