--- a/public/home.css
+++ b/public/home.css
@@ -1,60 +1,3 @@
-.menu-container {
-    background-color: white;
-    padding: 10px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 50px;
-}
-
-.logo {
-    width: 100px;
-    height: 50px;
-    padding-left: 20px;
-}
-
-.search-container {
-    width: 60%;
-    height: 40px;
-    padding: 5px;
-}
-
-.search-input {
-    width: 80%;
-    font-size: 18pt;
-    height: 30px;
-    padding: 5px;
-    border: 1px solid grey;
-    border-radius: 4px;
-    float: left;
-}
-
-.search-img {
-    width: 32px;
-    height: 32px;
-}
-
-.search-button{
-    background-color: #00000000; /*투명*/
-    border:none;
-    position: relative;
-    margin-left:5px;
-    top:50%;
-    transform: translateY(-50%);
-}
-    
-
-.login-button {
-    padding: 5px 10px;
-    background-color: lightgrey;
-    font-size:15pt;
-    color: black;
-    border: none;
-    cursor: pointer;
-    border-radius: 2px;
-    margin-right: 30px;
-}
-
 .button-img{
     width:32px;
     height: 32px;
@@ -73,8 +16,10 @@
     background-color: #f0f0f0;
     transition: all 0.3s ease;
     margin: auto;
-    min-width: 80px;
-    max-width: 300px;
+    min-width: 67px;
+    max-width: 154px;
+    min-height: 87px;
+    cursor: pointer;
 }
 
 .category-container{
@@ -84,7 +29,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     align-items: center;
-    max-width: 1000px;
+    max-width: 1024px;
     margin: auto;
     margin-bottom: 100px;
 }
@@ -100,20 +45,19 @@
     user-select:none;
     flex-wrap: nowrap;
     margin: auto;
-    max-width: 800px;
-    max-height: 300px;
+    max-width: 851px;
+    max-height: 309px;
+    cursor: pointer;
 }
 
 .banner-item{
     display:flex;
     align-items: center;
     justify-content: center;
-
     position:relative;
     left: 0px;
-
     width:100%;
-    height:300px;
+    height:100%;
     flex-shrink: 0;
     transition: left 0.15s;
 }
