--- a/public/css/category.css
+++ b/public/css/category.css
@@ -1,33 +1,33 @@
-.content-container{
+.content-container {
     width: 100%;
     height: 100%;
     padding: 0;
     margin: auto;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    flex-direction: row;
+    justify-content: flex-start;
     max-width: 1024px;
+    margin-top:79px;
 }
 
-.category-container{
-    width: 17%;
+.category-container {
+    width: 18%;
     padding: 5px;
     border: none;
     background-color: white;
     min-width: fit-content;
-    max-width: 67px;
     margin-right: 20px;
-    float : left;
+    float: left;
 }
 
-.category-big{
+.category-big {
     padding: 0;
     margin: 0;
-    font-weight:normal;
+    font-weight: normal;
     font-size: 1.17em;
 }
 
-.category-small{
+.category-small {
     width: 100%;
     height: 100%;
     padding: 0;
@@ -36,15 +36,154 @@
     max-width: 1024px;
     margin-bottom: 20px;
 }
-.category-small button{
-    text-align:left;
-    width:100%;
+
+.category-small button {
+    text-align: left;
+    width: 100%;
     padding: 0;
     margin: 0;
     font-weight: normal;
     font-size: 1.17em;
     color: #808080;
-    background-color: #ffff;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+button {
+    background-color: #00000000;
     border: none;
     cursor: pointer;
+}
+
+ul li {
+    list-style: none;
+}
+
+#menu {
+    width: 100%;
+    color: black;
+    margin: 0 auto;
+    text-align: center;
+    background-color: white;
+    border: black;
+    border-radius: 10px;
+}
+
+#menu>ul {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#menu>ul>li {
+    display: inline-block;
+    margin-right: 20px;
+    /* 각 항목 사이 간격 조정 */
+    position: relative;
+    /* 소 카테고리를 위한 상대 위치 */
+}
+
+#menu>ul>li>#Category {
+    font-size: 19px;
+}
+
+#menu>ul>li>button {
+    border: none;
+    border-radius: 5px;
+    background-color: #00000000;
+    /* 배경색 설정 */
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: bold;
+}
+
+
+#submenu {
+    border: 1px solid #d9d9d9;
+    border-radius: 10px;
+    background-color: #fafafa;
+    font-size: 14px;
+    width: 100%;
+    max-width:1024px;
+    box-shadow: -1px 2px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+    margin-top: 10px;
+    padding: 10px;
+    z-index:10;
+    position : absolute;
+}
+
+#submenu ul {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start; /* 아이템을 오른쪽으로 정렬합니다 */
+}
+
+#submenu ul > li {
+    margin-bottom: 5px;
+    margin-right: 37px;
+    margin-left : 20px;
+}
+
+
+#submenu ul > li:last-child{
+    margin-right:0px;
+}
+
+#submenu ul ul {
+    display: block;
+    margin: 0;
+    padding: 0;
+}
+
+#submenu ul ul li {
+    margin: 0;
+}
+
+#submenu ul ul li button {
+    display: block;
+    text-align: left;
+}
+
+#submenu > ul > li > ul > li > button{
+    color: black;
+}
+
+#submenu > ul > li > ul > li > ul > li >button{
+    color: gray;
+}
+
+#submenu > ul > li > ul > li > ul > li:last-child{
+    margin-bottom : 10px;
+}
+
+.list{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+}
+
+.Card{
+    cursor : pointer;
+    width:178px;
+    height:155px;
+    padding : 10px;
+}
+
+.sample-image {
+    width: 178px;
+    height: 118px;
+    border-radius: 10px;
+    background-color: gray;
+    margin-bottom : 2px;
+}
+
+.card-name{
+    margin-bottom : 2px;
+    font-size: 12px;
 }
