--- a/public/css/global.css
+++ b/public/css/global.css
@@ -1,156 +1,177 @@
-body{
-    padding-top: 100px;
+body {
+  padding-top: 100px;
+  max-width: 1024px;
+  
+  margin-right : auto;
+  margin-left : auto;
 }
 
 .menu-container {
-    position:fixed;
-    top: 0;
-    width: 100%;
-    left: 0;
-    right: 0;
-    background-color: white;
-    padding: 10px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 50px;
-    z-index: 9999
+  position: fixed;
+  top: 0;
+  width: 100%;
+  max-width: 1024px;
+  left: 0;
+  right: 0;
+  background-color: white;
+  padding-top: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 50px;
+  margin-left : auto;
+  margin-right: auto;
+  z-index: 9999
 }
 
 .logo {
-    width: 100px;
-    height: 50px;
-    padding-left: 20px;
+  width: 100px;
+  height: 50px;
 }
 
 .search-container {
-    width: 60%;
-    height: 40px;
-    padding: 5px;
+  position: relative;
+  display:flex;
+  align-items:center;
+  width: 60%;
+  height: 38px;
+  background-color: #d9d9d9;
+  border-radius: 10px;
 }
 
 .search-input {
-    width: 90%;
-    font-size: 18pt;
-    height: 80%;
-    padding: 5px;
-    border: 1px solid grey;
-    border-radius: 4px;
-    float: left;
+  flex: 1;
+  width: 100%;
+  background-color: #00000000;
+  border-color: #00000000;
+  font-size: 14px;
+  height: 80%;
+  text-align: center;
+  padding-left:40px;
+}
+
+.search-input::placeholder{
+  color: black;
 }
 
 .search-img {
-    width: 32px;
-    height: 32px;
+  width: 32px;
+  height: 32px;
+  margin-top: 10%;
 }
 
-.search-button{
-    background-color: #00000000; /*투명*/
-    border:none;
-    position: relative;
-    margin-left:5px;
-    top:50%;
-    transform: translateY(-50%);
-    cursor:pointer;
+.search-button {
+  background-color: #00000000;
+  border: none;
+  margin-left: 5px;
+  cursor: pointer;
+  width:40px;
+  height: 40px;
 }
-    
+
+#login{
+  font-size : 14px;
+}
 
 .login-button {
-    padding: 5px 10px;
-    background-color: white;
-    font-size:15pt;
-    color: black;
-    border: none;
-    cursor: pointer;
-    border-radius: 2px;
-    margin-right: 30px;
-}
-
-#logout button{
   padding: 5px 10px;
   background-color: white;
-  font-size:15pt;
+  font-size: 15px;
+  color: black;
+  border: none;
+  cursor: pointer;
+  border-radius: 2px;
+  margin-right: 30px;
+}
+
+#logout button {
+  padding: 5px 10px;
+  background-color: white;
+  font-size: 15px;
   color: black;
   border: none;
   cursor: pointer;
   border-radius: 2px;
 }
 
-#logout{
-  margin-right: 30px
+#logout {
+  margin-right: 30px;
+  font-size : 14px;
 }
 
 a {
-    text-decoration: none;
-    color: black;
-  }
+  text-decoration: none;
+  color: black;
+}
 
-  .popup-overlay{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    visibility: hidden;
-    opacity: 0;
-    transition: visibility 0s, opacity 0.3s ease;
-  }
+.popup-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s, opacity 0.3s ease;
+}
 
-  .popup-content{
-    width: 328px;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-  }
+.popup-content {
+  width: 328px;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
 
-  .popup-content h2{
-    text-align: center;
-    margin-top: -30px;
-  }
+.popup-content h2 {
+  text-align: center;
+  margin-top: -30px;
+}
 
-  .popup-content form {
-    display: flex;
-    flex-direction: column;
-  }
+.popup-content form {
+  display: flex;
+  flex-direction: column;
+}
 
-  .popup-content input{
-    margin-bottom: 10px;
-	padding: 8px;
-	border-radius: 3px;
-	border: 1px solid #ccc;
-    font-size: 1em;
-  }
+.popup-content input {
+  margin-bottom: 10px;
+  padding: 8px;
+  border-radius: 3px;
+  border: 1px solid #ccc;
+  font-size: 1em;
+}
 
-  .popup-content input[type="submit"]{
-    padding: 8px 12px;
-    border: none;
-    border-radius: 3px;
-    background-color: dimgray;
-    color: #fff;
-    cursor: pointer;
-  }
+.popup-content input[type="submit"] {
+  padding: 8px 12px;
+  border: none;
+  border-radius: 3px;
+  background-color: dimgray;
+  color: #fff;
+  cursor: pointer;
+}
 
-  .popup-content .close-btn{
-    position: relative;
-    top: -30px;
-    left: 98%;
-    cursor: pointer;
-    font-size: 2em;
-  }
+.popup-content .close-btn {
+  position: relative;
+  top: -30px;
+  left: 98%;
+  cursor: pointer;
+  font-size: 2em;
+}
 
-  .signup-button{
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 40px;
-    box-shadow: 0 0 0 1px dimgray inset;
-    border-radius: 3px;
-    color: #000;
-    cursor: pointer;
-  }
+/*
+.signup-button {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 40px;
+  box-shadow: 0 0 0 1px dimgray inset;
+  border-radius: 3px;
+  color: #000;
+  cursor: pointer;
+}
+*/
