--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,7 +1,12 @@
+.logo{
+    width:80px;
+    height:62px;
+}
 .button-img{
-    width:32px;
-    height: 32px;
+    width:62px;
+    height:62px;
     margin-bottom: 5px; 
+    
 }
 
 .category-button {
@@ -10,10 +15,9 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-    border: 1px solid #ccc;
+    border: 0px;
     padding: 10px;
-    border-radius: 5px;
-    background-color: #f0f0f0;
+    background-color: #ffffff;
     transition: all 0.3s ease;
     margin: auto;
     min-width: 67px;
@@ -40,7 +44,7 @@
     width: 100%;
     height: 300px;
     overflow: hidden;
-
+    border-radius: 10px;
     display:flex;
     user-select:none;
     flex-wrap: nowrap;
