--- a/public/css/global.css
+++ b/public/css/global.css
@@ -5,7 +5,7 @@ body{
 .menu-container {
     position:fixed;
     top: 0;
-    width: 100%;
+    width: 200;
     left: 0;
     right: 0;
     background-color: white;
@@ -20,7 +20,7 @@ body{
 .logo {
     width: 100px;
     height: 50px;
-    padding-left: 20px;
+    padding-left: 80px;
 }
 
 .search-container {
