--- a/public/css/detail.css
+++ b/public/css/detail.css
@@ -5,8 +5,9 @@
     flex-wrap: nowrap;
     justify-content: center;
     align-items: stretch;
-    max-width: 1024px;
+    max-width: 1300px;
     margin: auto;
+    border: 0px;
 }
 
 .explain-container{
@@ -16,9 +17,9 @@
     flex-direction: column;
     flex-wrap: nowrap;
     justify-content: center;
-    max-width: 676px;
+    max-width: 900px;
+    border: 0px;
 }
-
 
 .title {
     font-size: 18pt;
@@ -29,21 +30,22 @@
 }
 
 .profile-container{
-    width: auto;
+    width: 200px;
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
+    border: 0px;
 }
 
 .person-container{
-    width: 100%;
+    width: 70%;
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
-    justify-content: center;
+    justify-content: center;    
     max-width: 1024px;
-    border: 2px solid #cccc;
-    border-radius : 2px;
+    border: 0px solid #cccc;
+    border-radius : 0px;
 }
 
 .person-container ul {
@@ -53,28 +55,27 @@
 }
 
 .person-container ul li {
-    margin-bottom: 5px;
+    margin-bottom: 14px;
 }
 
 
 .person-img{
     background-color: aqua;
-    width: 154px;
+    width: 230px;
     height: 154px;
-    border-radius: 100%;
+    border-radius: 10px;
     margin: 20px
 }
 
 .review-container{
-    margin-top:20px;
-    border : 2px solid #cccc;
-    border-radius : 2px;
+    margin-top:50px;
+    border : 0px;
     width: 100%;
 }
 
 .review-container button{
     background-color: white;
-    border: none;
+    border: 0px;
     font-size: 12pt;
     width: 100%;
     height: 50px;
@@ -93,6 +94,8 @@
     margin: auto;
     max-width: 800px;
     max-height: 300px;
+    border: 0px;
+    border-radius: 10px;
 }
 
 .banner-item{
@@ -104,7 +107,7 @@
     left: 0px;
 
     width:100%;
-    height:300px;
+    height:100%;
     flex-shrink: 0;
     transition: left 0.15s;
 }
@@ -155,7 +158,6 @@
 .banner-pagination{
     display: flex;
     gap: 5px;
-
     position: absolute;
     bottom: 0;
     left: 50%;
@@ -193,4 +195,9 @@
     margin-bottom: 20px;
     border: 2px solid #cccc;
     border-radius: 2px;
-}}
+}
+.person-content content{
+    width: 230px;
+    border-radius: 10px;
+    margin: 20px
+} 
