--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,6 +1,6 @@
 .button-img{
-    width:32px;
-    height: 32px;
+    width: 48px;
+    height: 48px;
     margin-bottom: 5px; 
 }
 
@@ -10,16 +10,22 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-    border: 1px solid #ccc;
+    border: 1px solid #00000000;
     padding: 10px;
     border-radius: 5px;
-    background-color: #f0f0f0;
+    background-color: #00000000;
     transition: all 0.3s ease;
     margin: auto;
-    min-width: 67px;
-    max-width: 154px;
-    min-height: 87px;
+    max-width: 144px;
+    max-height: 68px;
     cursor: pointer;
+    margin-top: 64px;
+}
+
+.category-button > span {
+    margin-top: 10px;
+    font-size : 14px;
+    font-weight: bold;
 }
 
 .category-container{
@@ -38,15 +44,15 @@
 .banner {
     position: relative;
     width: 100%;
-    height: 300px;
+    height: 270px;
     overflow: hidden;
 
     display:flex;
     user-select:none;
     flex-wrap: nowrap;
     margin: auto;
-    max-width: 851px;
-    max-height: 309px;
+    max-width: 988px;
+    max-height: 270px;
     cursor: pointer;
 }
 
@@ -68,7 +74,7 @@
     align-items: center;
     position: absolute;
     top: calc(50% - 16px);
-
+    color: white;
     width: 32px;
     height: 32px;
     border-radius: 100%;
@@ -140,4 +146,21 @@ ul,li{
     height: 300px;
     flex-shrink: 0;
     transition: left 0.15s;
+}
+
+.top10 > h3{
+    font-size : 26px;
+    margin: 0;
+}
+
+
+.top10 > h4 {
+    font-size : 20px;
+margin: 0;
+}
+
+.content-container{
+    display: flex;
+    align-items:flex-start;
+    justify-content: flex-start;
 }
