--- a/public/css/category.css
+++ b/public/css/category.css
@@ -15,7 +15,7 @@
     padding: 5px;
     border: none;
     background-color: white;
-    min-width: fit-content;
+    min-width: 164px;
     margin-right: 20px;
     float: left;
 }
