--- a/public/css/global.css
+++ b/public/css/global.css
@@ -1,3 +1,11 @@
+@media screen and (max-width:1022px){
+
+}
+
+@media screen and (min-width : 1023px){
+  
+}
+
 body {
   padding-top: 100px;
   max-width: 988px;
