--- a/public/css/detail.css
+++ b/public/css/detail.css
@@ -1,24 +1,28 @@
 .detail-container{
     width: 100%;
+    height: 650px;
     display: flex;
     flex-direction:row;
     flex-wrap: nowrap;
     justify-content: center;
     align-items: stretch;
-    max-width: 1300px;
+    max-width: 1500px;
     margin: auto;
-    border: 0px;
+    border:  0px;
 }
 
 .explain-container{
-    width: 67%;
+    width: 80%;
     margin-right: 20px;
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
     justify-content: center;
-    max-width: 1100px;
+    max-width: 1500px;
     border: 0px;
+}
+.explain-content content{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .title {
@@ -30,7 +34,7 @@
 }
 
 .profile-container{
-    width: 300px;
+    width: 20%;
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
@@ -38,39 +42,41 @@
 }
 
 .person-container{
-    width: 70%;
+    width: 100%;
+    height: 600px;
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
     justify-content: center;    
-    max-width: 500px;
-    border: 0px solid #cccc;
-    border-radius : 0px;
+    border: 0px;
 }
 
 .person-container ul {
     color: black;
     list-style-type: square;
-    padding-left: 20px; /* 리스트에서 마커를 보여줄 위치를 지정 */
 }
 
 .person-container ul li {
     margin-bottom: 14px;
+    text-align: left;
 }
 
 
 .person-img{
-    background-color: aqua;
-    width: 230px;
+    background-color: gray;
+    width: 200px;
     height: 154px;
     border-radius: 10px;
-    margin: 20px
+    margin-top: 44px;
 }
 
 .review-container{
     margin-top:50px;
+    text-align: center;
     border : 0px;
     width: 100%;
+    border: solid 2px #000000;
+    border-radius: 10px;
 }
 
 .review-container button{
@@ -84,16 +90,15 @@
 
 .banner {
     position: relative;
-    width: 1000px;
-    height: 300px;
+    width: 790px;
+    height: 315px;
     overflow: hidden;
-
+    margin-top: 35px;
     display:flex;
     user-select:none;
     flex-wrap: nowrap;
-    margin: auto;
     max-width: 800px;
-    max-height: 300px;
+    max-height: 350px;
     border: 0px;
     border-radius: 10px;
 }
@@ -135,23 +140,23 @@
 }
 
 .banner-item.item1{
-    background-color: darkgoldenrod;
+    background-color: gray;
 }
 
 .banner-item.item2{
-    background-color: aqua;
+    background-color: gray;
 }
 
 .banner-item.item3{
-    background-color: darkcyan;
+    background-color: gray;
 }
 
 .banner-item.item4{
-    background-color: darkmagenta;
+    background-color: gray;
 }
 
 .banner-item.item5{
-    background-color: darkslateblue;
+    background-color: gray;
 }
 
 
@@ -188,7 +193,10 @@
     flex-shrink: 0;
     transition: left 0.15s;
 }
-
+.explain-title title{
+    font-size: 15pt;
+    text-align: left;
+}
 .explain-text{
     font-size: 12pt;
     text-align: left;
@@ -197,9 +205,7 @@
     border: 0px;
     border-radius: 2px;
 }
-.explain-title title{
-    text-align: left;
-}
+
 .person-content content{
     width: 230px;
     border-radius: 10px;
