--- a/public/css/category.css
+++ b/public/css/category.css
@@ -1,13 +1,34 @@
-.content-container {
-    width: 100%;
-    height: 100%;
-    padding: 0;
-    margin: auto;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    max-width: 1024px;
-    margin-top:79px;
+@media screen and (max-width: 1022px) {
+    #menu{
+        display:none;
+    }
+
+    .content-container {
+        display:none;
+    }
+}
+
+@media screen and (min-width: 1023px){
+    #menu {
+        width: 100%;
+        color: black;
+        margin: 0 auto;
+        text-align: center;
+        background-color: white;
+        border: black;
+        border-radius: 10px;
+    }
+    .content-container {
+        width: 100%;
+        height: 100%;
+        padding: 0;
+        margin: auto;
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        max-width: 1024px;
+        margin-top:79px;
+    }
 }
 
 .category-container {
@@ -72,15 +93,7 @@ ul li {
     list-style: none;
 }
 
-#menu {
-    width: 100%;
-    color: black;
-    margin: 0 auto;
-    text-align: center;
-    background-color: white;
-    border: black;
-    border-radius: 10px;
-}
+
 
 #menu>ul {
     display: flex;
