--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,46 +1,109 @@
+@media screen and (max-width: 1022px){
+    .category-button-container{
+        display:none;
+    }
+    .top10{
+        padding:24px;
+        padding-top:48px;
+    }
+    .content{
+        max-width: 50%;
+        max-height: 114px;
+        margin-bottom: 55px;
+        cursor: pointer;
+    }
+    
+.content > img{
+    width: 100%;
+    height: 114px;
+    border-radius : 10px;
+    background-color : #d9d9d9;
+}
+.top10 > h3{
+    font-size : 20px;
+    margin: 0;
+}
+
+
+.top10 > h4 {
+    font-size : 14px;
+    margin: 0;
+    margin-bottom: 30px;
+}
+
+}
+
+@media screen  and (min-width: 1023px) {
+    .category-button {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        border: 1px solid #00000000;
+        padding: 10px;
+        border-radius: 5px;
+        background-color: #00000000;
+        transition: all 0.3s ease;
+        margin: auto;
+        max-width: 144px;
+        max-height: 68px;
+        cursor: pointer;
+        margin-top: 64px;
+    }
+    .category-button > span {
+        margin-top: 10px;
+        font-size : 14px;
+        font-weight: bold;
+    }
+    
+    .category-button-container{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-items: center;
+        max-width: 988px;
+        margin: auto;
+        margin-bottom: 100px;
+    }
+    .top10{
+        padding:0;
+    }
+    .content{
+        max-width: 178px;
+        max-height: 151px;
+        margin-bottom: 35px;
+        cursor: pointer;
+    }
+    
+.content > img{
+    width: 178px;
+    height: 118px;
+    border-radius : 10px;
+    background-color : #d9d9d9;
+}
+.top10 > h3{
+    font-size : 26px;
+    margin: 0;
+}
+
+
+.top10 > h4 {
+    font-size : 20px;
+    margin: 0;
+    margin-bottom: 30px;
+}
+
+}
+
 .button-img{
     width: 48px;
     height: 48px;
     margin-bottom: 5px; 
     
 }
-
-.category-button {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    border: 1px solid #00000000;
-    padding: 10px;
-    border-radius: 5px;
-    background-color: #00000000;
-    transition: all 0.3s ease;
-    margin: auto;
-    max-width: 144px;
-    max-height: 68px;
-    cursor: pointer;
-    margin-top: 64px;
-}
-
-.category-button > span {
-    margin-top: 10px;
-    font-size : 14px;
-    font-weight: bold;
-}
-
-.category-container{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: center;
-    max-width: 988px;
-    margin: auto;
-    margin-bottom: 100px;
-}
-
 
 .banner {
     position: relative;
@@ -149,17 +212,6 @@ ul,li{
     transition: left 0.15s;
 }
 
-.top10 > h3{
-    font-size : 26px;
-    margin: 0;
-}
-
-
-.top10 > h4 {
-    font-size : 20px;
-    margin: 0;
-    margin-bottom: 30px;
-}
 
 .content-container{
     display: flex;
@@ -175,16 +227,4 @@ ul,li{
     margin-top : 10px;
 }
 
-.content{
-    max-width: 178px;
-    max-height: 151px;
-    margin-bottom: 35px;
-    cursor: pointer;
-}
 
-.content > img{
-    width: 178px;
-    height: 118px;
-    border-radius : 10px;
-    background-color : #d9d9d9;
-}
