--- a/public/css/detail.css
+++ b/public/css/detail.css
@@ -1,3 +1,7 @@
+@media screen and (min-width:1023px){
+.body2{
+    display:none;
+}
 .detail-container{
     width: 100%;
     height: 650px;
@@ -211,3 +215,12 @@
     border-radius: 10px;
     margin: 20px
 } 
+}
+@media screen and (max-width:1022px){
+.body1{
+    display: none;
+}
+.moblie-menu{
+    color: #7fb5ff;
+}
+}
