--- a/public/css/global.css
+++ b/public/css/global.css
@@ -82,6 +82,7 @@
     align-items: center;
     width: 95%;
     height: 38px;
+    margin-top: 15px;
     background-color: #d9d9d9;
     border-radius: 10px;
     left: 50%;
