--- a/public/css/detail.css
+++ b/public/css/detail.css
@@ -17,6 +17,14 @@
     margin: auto;
     border:  0px;
 }
+.catalog-button{
+    margin-top: 20px;
+    margin-left: 57px;
+    width: 80px;
+    height: 40px;
+    border: #bab9b9e9 solid 2px;
+    background-color: #bab9b9e9; 
+}
 
 .explain-container{
     width: 80%;
@@ -50,7 +58,7 @@
 
 .person-container{
     width: 100%;
-    height: 600px;
+    height: 900px;
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
@@ -78,8 +86,8 @@
 }
 
 .review-container{
-    margin-top:50px;
     text-align: center;
+    margin-top: 10px;
     border : 0px;
     width: 100%;
     border: solid 2px #000000;
@@ -370,5 +378,12 @@
     }
     .explain-text-mobile{
         margin-left: 25px;
+    }
+    .catalog-button{
+        margin-top: 20px;
+        width: 100%;
+        height: 40px;
+        border: #bab9b9e9 solid 2px;
+        background-color: #bab9b9e9; 
     }
 } 
