--- a/app/src/views/home/home.ejs
+++ b/app/src/views/home/home.ejs
@@ -154,8 +154,8 @@
             </div>
         </div>
     </div>
-    <script src="js/home.js"></script>
-    <script src="js/global.js"></script>
+    <script src="/js/home/home.js"></script>
+    <script src="/js/home/global.js"></script>
 </body>
 
 </html>
