--- a/public/css/detail.css
+++ b/public/css/detail.css
@@ -336,6 +336,7 @@
         background-color: gray;
         width: 100px;
         height: 100px;
+        border: 0px;
         border-radius: 10px;
         margin-top: 20px;
         margin-left: 23px;
