--- a/app/src/views/home/home.ejs
+++ b/app/src/views/home/home.ejs
@@ -27,9 +27,9 @@
                 <span onclick="closePopup()" class="close-btn">&times;</span>
                 <h2>로그인</h2>
                 <form action="login">
-                    <input type="text" name="id" placeholder="아이디">
-                    <input type="password" name="pw" placeholder="비밀번호">
-                    <input type="submit" value="로그인">
+                    <input id="id" type="text" name="id" placeholder="아이디">
+                    <input id="password" type="password" name="password" placeholder="비밀번호">
+                    <input id="btn_login" type="submit" value="로그인">
                 </form>
             </div>
         </div>
