회원가입 구현 (사설 db X)

--- a/app/src/views/home/login.ejs
+++ b/app/src/views/home/login.ejs
@@ -20,7 +20,7 @@
         </div>
         <div id=login>
             <button onclick="openPopup()" class="login-button">로그인</button>
-            <a href="/signup" class="signup-button">회원가입</a>
+            <a href="/register" class="signup-button">회원가입</a>
         </div>
         <div id="popup" class="popup-overlay">
             <div class="popup-content">
