--- a/app/src/views/home/register.ejs
+++ b/app/src/views/home/register.ejs
@@ -4,6 +4,7 @@
         <title>구했소</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="css/signup.css">
+        <script src="/js/home/register.js" defer></script>
     </head>
     <body>
         <div class="title-container">
@@ -13,7 +14,7 @@
         
         <form action ="sign-up" class = input-container>
             <h3>이름</h3>
-            <input type="text" name="name" placeholder="이름" class="input-box">
+            <input id="name" type="text" name="name" placeholder="이름" class="input-box">
             <h3>카테고리</h3>
             <select name="category" id="category">
                 <option value ="car-repair">자동차 정비</option>
@@ -25,16 +26,17 @@
                 <option value="sport">스포츠 용역</option>
             </select>
             <h3>전화번호</h3>
-            <input type="text" name="phone" placeholder="전화번호" class="input-box">
+            <input id="phone-number" type="text" name="phone" placeholder="전화번호" class="input-box">
             <h3>이메일</h3>
-            <input type="text" name="email" placeholder="이메일" class="input-box">
+            <input id="email" type="text" name="email" placeholder="이메일" class="input-box">
             <h3>ID</h3>
-            <input type="text" name="id" placeholder="아이디" class="input-box">
+            <input id="id" type="text" name="id" placeholder="아이디" class="input-box">
             <h3>비밀번호</h3>
-            <input type="password" name="pw" placeholder="비밀번호" class="input-box">
+            <input id="password" type="password" name="pw" placeholder="비밀번호" class="input-box">
             <h3>비밀번호 확인</h3>
-            <input type="password" name="pw2" placeholder="비밀번호 확인" class="input-box">
-            <input type="submit" value="가입하기">
+            <input id="confirm-password" type="password" name="pw2" placeholder="비밀번호 확인" class="input-box">
+            <p id="btn_register">가입하기</p>
+            <!-- <input id="btn_register" type="submit" value="가입하기"> -->
         </form>
     </body>
 </html>
