--- a/public/css/home.css
+++ b/public/css/home.css
@@ -160,7 +160,7 @@
     width: 32px;
     height: 32px;
     border-radius: 100%;
-    background-color: #cccc;
+    background-color: #00000046;
     cursor: pointer;
 }
 
